tests/support/validation/invalid/trip_with_missing_timepoint/trip_patterns.ppat
PPAT;   04;Inbound   ; 4;04_iv_2   ;north ;hayms ;dvsta ;atlst ;seasl ;trade ;bmipk ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;      ;
